--- a/src/scss/pages/_common.scss
+++ b/src/scss/pages/_common.scss
@@ -1,5 +1,5 @@
 
-// mixin --------------------------------
+///////////////////  Mixins  ///////////////////
 
 @mixin make-crisp-image () {
   image-rendering: -moz-crisp-edges;         /* Firefox */
@@ -33,11 +33,37 @@
   }
 }
 
-// mixin --------------------------------
+
+
+///////////////////  Animations  ///////////////////
+
+@keyframes rotating {
+  from {
+    -ms-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -ms-transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+.rotating {
+  -webkit-animation: rotating 2s linear infinite;
+  -moz-animation: rotating 2s linear infinite;
+  -ms-animation: rotating 2s linear infinite;
+  -o-animation: rotating 2s linear infinite;
+  animation: rotating 2s linear infinite;
+}
 
 
 
-// fonts --------------------------------
+///////////////////  Fonts  ///////////////////
 
 @font-face {
   font-family: 'worksans-thin';
@@ -66,11 +92,9 @@
   font-style: normal;
 }
 
-// fonts end --------------------------------
 
 
-
-// base styles --------------------------------
+///////////////////  Base  ///////////////////
 
 html {
   padding: 0;
@@ -105,19 +129,12 @@ h3, .h3 {
   line-height: 1.2;
 }
 
-// base styles end --------------------------------
-
-
-
-// main container --------------------------------
-
 .main-container {
-  background: rgba(255,255,255,0.8);
 }
 
 
-// main container end --------------------------------
 
+///////////////////  Sections  ///////////////////
 
 %article-wrapper {
   min-height: 100vh;
@@ -193,7 +210,8 @@ h3, .h3 {
 }
 
 
-// intro --------------------------------
+
+///////////////////  Intro  ///////////////////
 
 #intro {
   @extend %article-wrapper;
@@ -241,11 +259,9 @@ h3, .h3 {
 //  padding: 40px;
 //}
 
-// intro end --------------------------------
 
 
-
-// skills  --------------------------------
+///////////////////  Skills  ///////////////////
 
 #skills {
   @extend %article-wrapper;
@@ -294,11 +310,9 @@ h3, .h3 {
   }
 }
 
-// skills end --------------------------------
 
 
-
-// portfolio --------------------------------
+///////////////////  Portfolio  ///////////////////
 
 %portfolio-item-img-preview {
   position: absolute;
@@ -306,10 +320,8 @@ h3, .h3 {
   transform: translateX(-50%) translateY(-50%);
 }
 
-
 #portfolio {
   @extend %article-wrapper;
-  //background: linear-gradient(to right, rgba(255,255,255,0.8) 0%,rgba(255,255,255,0.7) 100%); ;
   flex-direction: column;
 
   & .section-header-img-wrapper {
@@ -342,125 +354,36 @@ h3, .h3 {
 
   & .portfolio-item-vendomo-crm {
     @extend %portfolio-item;
-    //background-color: #fff;
-    //background-color: #D8CBC7;
   }
 
   &  .portfolio-item-img {
     width: 100%;
   }
 
-  & .portfolio-item-vendomo {
-    @extend %portfolio-item;
-
-    & .portfolio-item-desktop {
-      position: absolute;
-      top: 13%;
-      left: 26%;
-      width: 60%;
-      max-width: 796px;
-
-      & .portfolio-item-img-preview {
-          @extend %portfolio-item-img-preview;
-          top: 36.4%;
-      }
-    }
-
-    & .portfolio-item-tablet {
-      position: absolute;
-      top: 44%;
-      left: 70%;
-      width: 50%;
-      max-width: 263px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 44.5%;
-      }
-    }
-
-    & .portfolio-item-notebook {
-      position: absolute;
-      top: 44.6%;
-      left: 0;
-      width: 50%;
-      max-width: 600px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 42.2%;
-      }
-    }
-
-    & .portfolio-item-mobile {
-      position: absolute;
-      top: 60%;
-      left: 85%;
-      width: 10%;
-      max-width: 111px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 45.5%;
-      }
-    }
+  %portfolio-item {
+    height: 100vh;
+    display: flex;
+    margin-bottom: 0;
   }
 
-  & .portfolio-item-foodora {
-    @extend %portfolio-item;
-
-    & .portfolio-item-desktop {
-      position: absolute;
-      top: 13%;
-      left: 10%;
-      width: 60%;
-      max-width: 796px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 36.4%;
-      }
-    }
-
-    & .portfolio-item-tablet {
-      position: absolute;
-      top: 44%;
-      left: 0;
-      width: 50%;
-      max-width: 263px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 44.5%;
-      }
-    }
-
-    & .portfolio-item-notebook {
-      position: absolute;
-      top: 44.6%;
-      left: 52%;
-      width: 50%;
-      max-width: 600px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 42.2%;
-      }
-    }
-
-    & .portfolio-item-mobile {
-      position: absolute;
-      top: 60%;
-      left: 14%;
-      width: 10%;
-      max-width: 111px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 45.5%;
-      }
-    }
+  .portfolio-item-title {
+    position: absolute;
+    left: 50%;
+    top: 12rem;
+    font-size: 2.8rem;
+    text-align: center;
+    width: 30%;
   }
+
+  .portfolio-item-subtitle {
+    position: absolute;
+    left: 50%;
+    top: 15rem;
+    text-align: center;
+    width: 30%;
+  }
+
+  /////////  BK  /////////
 
   & .portfolio-item-bk {
     @extend %portfolio-item;
@@ -481,7 +404,7 @@ h3, .h3 {
     & .portfolio-item-tablet {
       position: absolute;
       top: 44%;
-      left: 6%;
+      left: 11.5%;
       width: 50%;
       max-width: 263px;
 
@@ -507,7 +430,7 @@ h3, .h3 {
     & .portfolio-item-mobile {
       position: absolute;
       top: 60%;
-      left: 2%;
+      left: 6%;
       width: 10%;
       max-width: 111px;
 
@@ -518,13 +441,131 @@ h3, .h3 {
     }
   }
 
-  & .portfolio-item-vendomo-crm {
+  /////////  Vendomo  /////////
+
+  & .portfolio-item-vendomo {
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
       position: absolute;
       top: 13%;
-      left: 15%;
+      left: 23%;
+      width: 60%;
+      max-width: 796px;
+
+      & .portfolio-item-img-preview {
+          @extend %portfolio-item-img-preview;
+          top: 36.4%;
+      }
+    }
+
+    & .portfolio-item-tablet {
+      position: absolute;
+      top: 44%;
+      left: 66%;
+      width: 50%;
+      max-width: 263px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 44.5%;
+      }
+    }
+
+    & .portfolio-item-notebook {
+      position: absolute;
+      top: 44.6%;
+      left: 0;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-mobile {
+      position: absolute;
+      top: 60%;
+      left: 82%;
+      width: 10%;
+      max-width: 111px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 45.5%;
+      }
+    }
+  }
+
+  /////////  Vendomo CRM  /////////
+
+  & .portfolio-item-vendomo-crm {
+    @extend %portfolio-item;
+
+    & .portfolio-item-desktop {
+      position: absolute;
+      top: 14%;
+      left: 8%;
+      width: 60%;
+      max-width: 796px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 36.4%;
+      }
+    }
+
+    & .portfolio-item-tablet {
+      position: absolute;
+      top: 49%;
+      left: 22%;
+      width: 50%;
+      max-width: 263px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 44.5%;
+      }
+    }
+
+    & .portfolio-item-notebook {
+      position: absolute;
+      top: 44.6%;
+      left: 49%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-mobile {
+      position: absolute;
+      top: 55%;
+      left: 13%;
+      width: 10%;
+      max-width: 111px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 45.5%;
+      }
+    }
+  }
+
+  /////////  Foodora  /////////
+
+  & .portfolio-item-foodora {
+    @extend %portfolio-item;
+
+    & .portfolio-item-desktop {
+      position: absolute;
+      top: 13%;
+      left: 25%;
       width: 60%;
       max-width: 796px;
 
@@ -537,7 +578,7 @@ h3, .h3 {
     & .portfolio-item-tablet {
       position: absolute;
       top: 44%;
-      left: 6%;
+      left: 72%;
       width: 50%;
       max-width: 263px;
 
@@ -549,8 +590,8 @@ h3, .h3 {
 
     & .portfolio-item-notebook {
       position: absolute;
-      top: 44.6%;
-      left: 52%;
+      top: 48.6%;
+      left: 3%;
       width: 50%;
       max-width: 600px;
 
@@ -562,8 +603,8 @@ h3, .h3 {
 
     & .portfolio-item-mobile {
       position: absolute;
-      top: 60%;
-      left: 2%;
+      top: 55.2%;
+      left: 62.8%;
       width: 10%;
       max-width: 111px;
 
@@ -574,15 +615,17 @@ h3, .h3 {
     }
   }
 
+  /////////  TIMVision  /////////
+
   & .portfolio-item-timvision {
     @extend %portfolio-item;
 
     & .portfolio-item-tv1 {
       position: absolute;
-      top: 17%;
-      left: 3%;
-      width: 53%;
-      max-width: 760px;
+      top: 16%;
+      left: 1%;
+      width: 55.9%;
+      max-width: 800px;
 
       & .portfolio-item-img-preview {
         @extend %portfolio-item-img-preview;
@@ -595,8 +638,8 @@ h3, .h3 {
       position: absolute;
       top: 32%;
       left: 37%;
-      width: 53%;
-      max-width: 760px;
+      width: 55.9%;
+      max-width: 800px;
 
       & .portfolio-item-img-preview {
         @extend %portfolio-item-img-preview;
@@ -604,16 +647,18 @@ h3, .h3 {
       }
     }
   }
+
+  /////////  CuboMusica  /////////
 
   & .portfolio-item-cubomusica {
     @extend %portfolio-item;
 
     & .portfolio-item-tv1 {
       position: absolute;
-      top: 17%;
-      left: 3%;
-      width: 53%;
-      max-width: 760px;
+      top: 16%;
+      left: 1%;
+      width: 55.9%;
+      max-width: 800px;
 
       & .portfolio-item-img-preview {
         @extend %portfolio-item-img-preview;
@@ -626,8 +671,8 @@ h3, .h3 {
       position: absolute;
       top: 32%;
       left: 37%;
-      width: 53%;
-      max-width: 760px;
+      width: 55.9%;
+      max-width: 800px;
 
       & .portfolio-item-img-preview {
         @extend %portfolio-item-img-preview;
@@ -636,37 +681,157 @@ h3, .h3 {
     }
   }
 
+  /////////  UNICRI  /////////
+
+  & .portfolio-item-unicri {
+    @extend %portfolio-item;
+
+    & .portfolio-item-notebook-ande {
+      position: absolute;
+      top: 18%;
+      left: -2%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-eusec {
+      position: absolute;
+      top: 18%;
+      left: 56%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-cbrn {
+      position: absolute;
+      top: 31%;
+      left: 9%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-ipo {
+      position: absolute;
+      top: 31%;
+      left: 45%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-lab {
+      position: absolute;
+      top: 44%;
+      left: 27%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+  }
+
+  /////////  Others  /////////
+
+  & .portfolio-item-others {
+    @extend %portfolio-item;
+
+    & .portfolio-item-notebook-school {
+      position: absolute;
+      top: 18%;
+      left: -2%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-davide {
+      position: absolute;
+      top: 18%;
+      left: 56%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-acqua {
+      position: absolute;
+      top: 44%;
+      left: 27%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-milena {
+      position: absolute;
+      top: 31%;
+      left: 9%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+    & .portfolio-item-notebook-pandora {
+      position: absolute;
+      top: 31%;
+      left: 45%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+    }
+
+  }
 }
 
-%portfolio-item {
-  height: 100vh;
-  display: flex;
-  margin-bottom: 0;
-}
 
-.portfolio-item-title {
-  position: absolute;
-  left: 50%;
-  top: 12rem;
-  font-size: 2.8rem;
-  text-align: center;
-  width: 30%;
-}
 
-.portfolio-item-subtitle {
-  position: absolute;
-  left: 50%;
-  top: 15rem;
-  text-align: center;
-  width: 30%;
-}
-
-// portfolio end --------------------------------
+///////////////////  Experience  ///////////////////
 
 #experience {
   @extend %article-wrapper;
-  //background-color: #F3F3F3;
-
 
   & .article-title-wrapper {
     width: 25%;
@@ -677,11 +842,9 @@ h3, .h3 {
     }
   }
 
-
   & .article-body {
     height: 85%;
   }
-
 
   & .article-content-wrapper {
     width: 75%;
@@ -698,10 +861,12 @@ h3, .h3 {
   }
 }
 
+
+
+///////////////////  About  ///////////////////
+
 #about {
   @extend %article-wrapper;
-  //background-color: white;
-
 
   & .article-title-wrapper {
     width: 25%;
@@ -712,11 +877,9 @@ h3, .h3 {
     }
   }
 
-
   & .article-body {
     height: 85%;
   }
-
 
   & .article-content-wrapper {
     width: 75%;
@@ -735,10 +898,12 @@ h3, .h3 {
 }
 
 
+
+///////////////////  Contact  ///////////////////
+
 #contact {
   @extend %article-wrapper;
-  background-color: #F3F3F3;
-
+  background-color: #FFF;
 
   & .section-header {
     width: 25%;
@@ -750,11 +915,9 @@ h3, .h3 {
     }
   }
 
-
   & .article-body {
     height: 85%;
   }
-
 
   & .article-content-wrapper {
     width: 75%;
@@ -773,6 +936,9 @@ h3, .h3 {
 }
 
 
+
+///////////////////  Outro  ///////////////////
+
 #outro {
   @extend %article-wrapper;
 
@@ -780,35 +946,29 @@ h3, .h3 {
     margin-top: auto;
   }
 
-
   & .article-footer {
     margin-top: auto;
   }
 
-
   & .article-title-wrapper {
     width: 27%;
   }
-
 
   & .section-header-img-wrapper {
     max-width: 360px;
     margin-bottom: 2rem;
   }
 
-
   & .section-header-secondary-title {
     font-size: 4.6rem;
     line-height: 1.2;
   }
-
 
   & .section-header-sub-title {
     font-family: $font-family-work-sans-thin;
     font-size: 3rem;
     line-height: 1.2;
   }
-
 
   & .article-video {
     position: fixed;
@@ -826,7 +986,7 @@ h3, .h3 {
 }
 
 
-// footer --------------------------------
+///////////////////  Footer  ///////////////////
 
 .footer {
 
@@ -850,7 +1010,6 @@ h3, .h3 {
   @include make-button();
 }
 
-
 .article-header__nav__button {
   @include make-button();
 }
@@ -859,11 +1018,10 @@ h3, .h3 {
   //margin-bottom: auto;
 }
 
-// footer end --------------------------------
 
 
 
-// side bar --------------------------------
+///////////////////  Sidebar  ///////////////////
 
 .side-bar {
   @include media-breakpoint-down(sm) {
@@ -976,31 +1134,4 @@ h3, .h3 {
     top: 367px;
     left: 9px;
   }
-}
-
-// side bar end --------------------------------
-
-
-@keyframes rotating {
-  from {
-    -ms-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -ms-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-.rotating {
-  -webkit-animation: rotating 2s linear infinite;
-  -moz-animation: rotating 2s linear infinite;
-  -ms-animation: rotating 2s linear infinite;
-  -o-animation: rotating 2s linear infinite;
-  animation: rotating 2s linear infinite;
 }
