--- a/src/scss/pages/_common.scss
+++ b/src/scss/pages/_common.scss
@@ -17,10 +17,12 @@
 
 @mixin make-button () {
   border: 0;
-  padding: 5px 10px;
+  padding: 3px 7px;
   background: transparent;
   color: $brand-primary;
   cursor: pointer;
+  font-size: 1.2rem;
+  text-transform: uppercase;
   &:hover,
   &.hover,
   &:focus,
@@ -136,6 +138,10 @@ h3, .h3 {
 
 ///////////////////  Sections  ///////////////////
 
+.separator {
+  color: #CCC;
+}
+
 %article-wrapper {
   min-height: 100vh;
   display: flex;
@@ -153,24 +159,15 @@ h3, .h3 {
 }
 
 .section-header-title {
-  margin-top: 2.5rem;
+  margin-top: 3rem;
 }
 
 .section-header-secondary-title {
-  font-family: $font-family-she-always-walks-alone;
-  font-size: 2.4rem;
-  line-height: 1;
-  display: block;
-}
-
-.section-header-secondary-sub-title {
-  font-family: $font-family-work-sans-light;
-  font-size: 1.6rem;
+  font-family: $font-family-work-sans-thin;
+  font-size: 2.1rem;
   line-height: 1.2;
   display: block;
-  margin-bottom: 2rem;
 }
-
 
 .article-footer {
   text-align: center;
@@ -201,6 +198,7 @@ h3, .h3 {
 .section-header-img-wrapper {
   width: 100%;
   max-width: 300px;
+  margin-bottom: 2rem;
 }
 
 .article-nav {
@@ -226,9 +224,10 @@ h3, .h3 {
 
   & .section-header-sub-title {
     font-family: $font-family-work-sans-thin;
-    font-size: 3rem;
+    font-size: 4.5rem;
     line-height: 1.2;
-    margin-bottom: 3rem;
+    margin-bottom: 1.8rem;
+    margin-top: 0;
   }
 
   & .article-video {
@@ -366,21 +365,86 @@ h3, .h3 {
     margin-bottom: 0;
   }
 
-  .portfolio-item-title {
-    position: absolute;
-    left: 50%;
-    top: 12rem;
-    font-size: 2.8rem;
+  .portfolio-item-title-wrapper {
     text-align: center;
-    width: 30%;
+    position: absolute;
+    max-width: 241px;
+    background-image: url('/img/portfolio/frame.png');
+    width: 31%;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    min-height: 320px;
+    padding: 3.7rem 3rem;
+  }
+
+  .portfolio-item-title-img {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 0;
+  }
+
+  .portfolio-item-title {
+    font-family: $font-family-work-sans-thin;
+    font-size: 2.4rem;
+    margin: 0 0 0.3rem 0;
   }
 
   .portfolio-item-subtitle {
-    position: absolute;
-    left: 50%;
-    top: 15rem;
+    font-size: 1.8rem;
+  }
+
+  .portfolio-item-subtitle-employer {
+    font-size: 1.4rem;
+    margin: 3rem 0 0;
+  }
+
+  .portfolio-item-subtitle,
+  .portfolio-item-content-employer,
+  .portfolio-item-content-contribution {
+    margin: 0;
+    font-size: 1.6rem;
+    font-family: $font-family-work-sans-thin;
+    line-height: 1.3;
+  }
+
+  .portfolio-item-subtitle-contribution {
+    margin: 1rem 0 0;
+    font-size: 1.4rem;
+  }
+
+  .portfolio-item-title-wrapper-horizontal {
     text-align: center;
-    width: 30%;
+    position: absolute;
+    max-width: 320px;
+    width: 61%;
+    background-image: url('/img/portfolio/frame-horizontal.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    min-height: 241px;
+    padding: 3.5rem 4rem;
+
+    & .portfolio-item-title {
+      margin: 0;
+    }
+
+    & .portfolio-item-subtitle-contribution {
+      margin: 0.5rem 0 0;
+    }
+
+    & .portfolio-item-subtitle-employer {
+      margin: 0.5rem 0 0;
+    }
+
+  }
+
+  .project-type-label {
+    font-family: $font-family-work-sans-thin;
+    font-size: 1.6rem;
+    position: absolute;
+    top: -2.4rem;
+    left: 4.2%;
   }
 
   /////////  BK  /////////
@@ -439,6 +503,12 @@ h3, .h3 {
         top: 45.5%;
       }
     }
+
+    & .portfolio-item-title-wrapper {
+      left: 72.8%;
+      top: 7.5%;
+    }
+
   }
 
   /////////  Vendomo  /////////
@@ -497,6 +567,15 @@ h3, .h3 {
         top: 45.5%;
       }
     }
+
+    & .portfolio-item-title-wrapper {
+      left: 3%;
+      top: 7%;
+    }
+
+    & .portfolio-item-subtitle-employer {
+      margin: 3rem 0 0;
+    }
   }
 
   /////////  Vendomo CRM  /////////
@@ -506,7 +585,7 @@ h3, .h3 {
 
     & .portfolio-item-desktop {
       position: absolute;
-      top: 14%;
+      top: 13%;
       left: 8%;
       width: 60%;
       max-width: 796px;
@@ -519,7 +598,7 @@ h3, .h3 {
 
     & .portfolio-item-tablet {
       position: absolute;
-      top: 49%;
+      top: 50%;
       left: 22%;
       width: 50%;
       max-width: 263px;
@@ -545,7 +624,7 @@ h3, .h3 {
 
     & .portfolio-item-mobile {
       position: absolute;
-      top: 55%;
+      top: 55.2%;
       left: 13%;
       width: 10%;
       max-width: 111px;
@@ -554,6 +633,15 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 45.5%;
       }
+    }
+
+    & .portfolio-item-title-wrapper {
+      left: 66%;
+      top: 7%;
+    }
+
+    & .portfolio-item-subtitle-employer {
+      margin: 2rem 0 0;
     }
   }
 
@@ -613,6 +701,15 @@ h3, .h3 {
         top: 45.5%;
       }
     }
+
+    & .portfolio-item-title-wrapper {
+      left: 5%;
+      top: 11%;
+    }
+
+    & .portfolio-item-subtitle-employer {
+      margin: 3rem 0 0;
+    }
   }
 
   /////////  TIMVision  /////////
@@ -622,7 +719,7 @@ h3, .h3 {
 
     & .portfolio-item-tv1 {
       position: absolute;
-      top: 16%;
+      top: 18%;
       left: 1%;
       width: 55.9%;
       max-width: 800px;
@@ -636,7 +733,7 @@ h3, .h3 {
 
     & .portfolio-item-tv2 {
       position: absolute;
-      top: 32%;
+      top: 34%;
       left: 37%;
       width: 55.9%;
       max-width: 800px;
@@ -645,6 +742,15 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.4%;;
       }
+    }
+
+    & .portfolio-item-title-wrapper-horizontal {
+      left: 60%;
+      top: 5.5%;
+    }
+
+    & .project-type-label {
+      left: 1.6%;
     }
   }
 
@@ -655,7 +761,7 @@ h3, .h3 {
 
     & .portfolio-item-tv1 {
       position: absolute;
-      top: 16%;
+      top: 18%;
       left: 1%;
       width: 55.9%;
       max-width: 800px;
@@ -669,7 +775,7 @@ h3, .h3 {
 
     & .portfolio-item-tv2 {
       position: absolute;
-      top: 32%;
+      top: 34%;
       left: 37%;
       width: 55.9%;
       max-width: 800px;
@@ -679,6 +785,16 @@ h3, .h3 {
         top: 42.4%;;
       }
     }
+
+    & .portfolio-item-title-wrapper-horizontal {
+      left: 60%;
+      top: 5.5%;
+    }
+
+    & .project-type-label {
+      left: 1.6%;
+    }
+
   }
 
   /////////  UNICRI  /////////
@@ -686,9 +802,13 @@ h3, .h3 {
   & .portfolio-item-unicri {
     @extend %portfolio-item;
 
+    & .project-type-label {
+      top: -2.2rem;
+    }
+
     & .portfolio-item-notebook-ande {
       position: absolute;
-      top: 18%;
+      top: 25%;
       left: -2%;
       width: 50%;
       max-width: 600px;
@@ -697,11 +817,16 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: auto;
+        right: 12.8%;
+      }
     }
 
     & .portfolio-item-notebook-eusec {
       position: absolute;
-      top: 18%;
+      top: 25%;
       left: 56%;
       width: 50%;
       max-width: 600px;
@@ -710,11 +835,15 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: 12.8%;
+      }
     }
 
     & .portfolio-item-notebook-cbrn {
       position: absolute;
-      top: 31%;
+      top: 38%;
       left: 9%;
       width: 50%;
       max-width: 600px;
@@ -723,11 +852,16 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: auto;
+        right: 12.8%;
+      }
     }
 
     & .portfolio-item-notebook-ipo {
       position: absolute;
-      top: 31%;
+      top: 38%;
       left: 45%;
       width: 50%;
       max-width: 600px;
@@ -736,11 +870,15 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: 12.8%;
+      }
     }
 
     & .portfolio-item-notebook-lab {
       position: absolute;
-      top: 44%;
+      top: 51%;
       left: 27%;
       width: 50%;
       max-width: 600px;
@@ -749,8 +887,32 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: 50%;
+        bottom: -1rem;
+        top: auto;
+        transform: translateX(-50%);
+      }
     }
 
+    & .portfolio-item-title-wrapper {
+      left: 65%;
+      top: 8%;
+    }
+
+    & .portfolio-item-title-wrapper-horizontal {
+      left: 36.7%;
+      top: 7%;
+    }
+
+    & .portfolio-item-subtitle-employer {
+      margin-top: 0.5rem;
+    }
+
+    & .portfolio-item-title {
+      margin-top: 0.5rem;
+    }
   }
 
   /////////  Others  /////////
@@ -760,7 +922,7 @@ h3, .h3 {
 
     & .portfolio-item-notebook-school {
       position: absolute;
-      top: 18%;
+      top: 25%;
       left: -2%;
       width: 50%;
       max-width: 600px;
@@ -769,11 +931,16 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: auto;
+        right: 12.8%;
+      }
     }
 
     & .portfolio-item-notebook-davide {
       position: absolute;
-      top: 18%;
+      top: 25%;
       left: 56%;
       width: 50%;
       max-width: 600px;
@@ -782,24 +949,15 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
-    }
 
-    & .portfolio-item-notebook-acqua {
-      position: absolute;
-      top: 44%;
-      left: 27%;
-      width: 50%;
-      max-width: 600px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 42.2%;
+      & .project-type-label {
+        left: 12.8%;
       }
     }
 
     & .portfolio-item-notebook-milena {
       position: absolute;
-      top: 31%;
+      top: 38%;
       left: 9%;
       width: 50%;
       max-width: 600px;
@@ -808,11 +966,16 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: auto;
+        right: 12.8%;
+      }
     }
 
     & .portfolio-item-notebook-pandora {
       position: absolute;
-      top: 31%;
+      top: 38%;
       left: 45%;
       width: 50%;
       max-width: 600px;
@@ -821,8 +984,49 @@ h3, .h3 {
         @extend %portfolio-item-img-preview;
         top: 42.2%;
       }
+
+      & .project-type-label {
+        left: 12.8%;
+      }
     }
 
+    & .portfolio-item-notebook-acqua {
+      position: absolute;
+      top: 51%;
+      left: 27%;
+      width: 50%;
+      max-width: 600px;
+
+      & .portfolio-item-img-preview {
+        @extend %portfolio-item-img-preview;
+        top: 42.2%;
+      }
+
+      & .project-type-label {
+        left: 50%;
+        bottom: -1rem;
+        top: auto;
+        transform: translateX(-50%);
+      }
+    }
+
+    & .portfolio-item-title-wrapper {
+      left: 65%;
+      top: 8%;
+    }
+
+    & .portfolio-item-title-wrapper-horizontal {
+      left: 36.7%;
+      top: 7%;
+    }
+
+    & .portfolio-item-subtitle-employer {
+      margin-top: 1rem;
+    }
+
+    & .portfolio-item-title {
+      margin-top: 0.5rem;
+    }
   }
 }
 
@@ -840,6 +1044,11 @@ h3, .h3 {
       width: 70%;
       max-width: 300px;
     }
+  }
+
+  & .section-header-img {
+    position: relative;
+    left: -14%;
   }
 
   & .article-body {
@@ -863,17 +1072,18 @@ h3, .h3 {
 
 
 
-///////////////////  About  ///////////////////
+///////////////////  Contact  ///////////////////
 
-#about {
+#contact {
   @extend %article-wrapper;
 
-  & .article-title-wrapper {
+  & .section-header {
     width: 25%;
+    position: relative;
 
     & .section-header-img-wrapper {
-      width: 70%;
-      max-width: 300px;
+      width: 74%;
+      max-width: 350px;
     }
   }
 
@@ -898,12 +1108,10 @@ h3, .h3 {
 }
 
 
-
 ///////////////////  Contact  ///////////////////
 
-#contact {
+#about {
   @extend %article-wrapper;
-  background-color: #FFF;
 
   & .section-header {
     width: 25%;
@@ -911,7 +1119,7 @@ h3, .h3 {
 
     & .section-header-img-wrapper {
       width: 70%;
-      max-width: 350px;
+      max-width: 190px;
     }
   }
 
@@ -943,31 +1151,31 @@ h3, .h3 {
   @extend %article-wrapper;
 
   & .section-header {
-    margin-top: auto;
-  }
-
-  & .article-footer {
-    margin-top: auto;
-  }
-
-  & .article-title-wrapper {
-    width: 27%;
   }
 
   & .section-header-img-wrapper {
-    max-width: 360px;
-    margin-bottom: 2rem;
+    max-width: 350px;
+    margin-bottom: 3rem;
+  }
+
+  & .section-header-img {
+    position: relative;
+    left: 5%;
   }
 
   & .section-header-secondary-title {
-    font-size: 4.6rem;
-    line-height: 1.2;
+    font-size: 3rem;
+  }
+
+  & .section-header-nav {
+    margin-top: 3rem;
   }
 
   & .section-header-sub-title {
     font-family: $font-family-work-sans-thin;
-    font-size: 3rem;
+    font-size: 4.5rem;
     line-height: 1.2;
+    margin-bottom: 1.8rem;
   }
 
   & .article-video {
@@ -978,12 +1186,14 @@ h3, .h3 {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -2;
+    z-index: -1;
     transform: translateY(-50%) translateX(-50%);
     //background: url('/img/intro.jpg') no-repeat;
     background-size: cover;
   }
 }
+
+
 
 
 ///////////////////  Footer  ///////////////////
